--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "start": "node .output/server/index.mjs"
   },
   "devDependencies": {
-    "nuxt3": "latest"
   },
   "dependencies": {
+    "nuxt3": "latest",
     "@nuxtjs/composition-api": "^0.32.0",
     "@pinia/nuxt": "^0.1.8",
     "pinia": "^2.0.11",
