--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "build": "nuxi build",
     "start": "node .output/server/index.mjs"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "dependencies": {
     "nuxt3": "latest",
     "@nuxtjs/composition-api": "^0.32.0",
     "@pinia/nuxt": "^0.1.8",
+    "nuxt3": "latest",
     "pinia": "^2.0.11",
     "sass": "^1.49.9",
     "vuetify": "^3.0.0-alpha.13"
