--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "nuxt3": "latest",
+    "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/composition-api": "^0.32.0",
     "@pinia/nuxt": "^0.1.8",
     "nuxt3": "latest",
