--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "nuxi build",
     "start": "node .output/server/index.mjs"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@mdi/font": "^6.5.95"
+  },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/composition-api": "^0.32.0",
