--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "build": "nuxi build",
     "start": "node .output/server/index.mjs"
   },
-  "devDependencies": {
-    "@mdi/font": "^6.5.95"
-  },
   "dependencies": {
+    "@mdi/font": "^6.5.95",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/composition-api": "^0.32.0",
     "@pinia/nuxt": "^0.1.8",
